# Machine-Health-Monitoring-Fault-Diagnosis-System

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.yaml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  pytest.ini  requirements-extra.txt  requirements.txt
.github/workflows/: ci.yml
docs/: api_reference.md  architecture.md  developer_guide.md  user_guide.md
matlab/: bearing_fault_detection.m  vibration_analysis.m
notebooks/: 01_exploratory_analysis.ipynb  02_modeling.ipynb  03_vibration_signals.ipynb  04_reliability_weibull.ipynb  05_feature_engineering.ipynb  06_smote_and_tuning.ipynb
powerbi/: powerbi_guide.md
r/: reliability_analysis.R
reports/: generate_report.py  report_template.html
scripts/: backup_db.sh  run_pipeline.sh  setup_dev.sh
sql/: analytical_queries.sql  schema.sql
src/alerts/: notifier.py
src/api/: auth.py  main.py  middleware.py
src/dashboard/: app.py
src/database/: db_manager.py  export_for_powerbi.py  migrations.py
src/features/: bearing_diagnostics.py  feature_extraction.py
src/ingestion/: download_data.py
src/modeling/: ensemble.py  fault_classifier.py  health_scorer.py  hyperparameter_tuner.py  model_registry.py  smote_trainer.py
src/preprocessing/: augmentation.py  clean_data.py
src/utils/: data_loader.py  helpers.py  metrics.py
src/visualization/: plots.py
tests/: conftest.py  test_alerts.py  test_api.py  test_database.py  test_features.py  test_modeling.py  test_pipeline.py
web/: index.html
