[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

# =============================================================
# Project metadata
# =============================================================
[project]
name        = "cbm-health-monitoring"
version     = "1.0.0"
description = "Machine Health Monitoring & Fault Diagnosis System — end-to-end CBM pipeline"
readme      = "README.md"
requires-python = ">=3.10"
license     = { text = "MIT" }

keywords = [
    "condition-monitoring", "predictive-maintenance",
    "vibration-analysis", "fault-diagnosis", "machine-learning",
    "reliability-engineering", "CBM", "PdM",
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "joblib>=1.3.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.65.0",
    "jinja2>=3.1.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]
dashboard = [
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
]
advanced = [
    "imbalanced-learn>=0.12.0",  # SMOTE
    "optuna>=3.6.0",              # hyperparameter tuning
    "python-dotenv>=1.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "nbconvert>=7.0.0",
    "tabulate>=0.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "flake8>=7.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
]
all = [
    "cbm-health-monitoring[api,dashboard,advanced,notebooks,dev]",
]

[project.scripts]
cbm-pipeline  = "main:main"
cbm-api       = "src.api.main:app"

# =============================================================
# Tool configurations
# =============================================================

[tool.pytest.ini_options]
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow — skip with -m 'not slow'",
    "integration: requires full pipeline output",
    "db: requires a live database connection",
]

[tool.coverage.run]
source = ["src"]
omit   = ["*/tests/*", "*/__init__.py", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
]

[tool.black]
line-length    = 110
target-version = ["py310", "py311", "py312"]
include        = "\\.pyi?$"
exclude        = """
/(
    \\.git
  | \\.venv
  | build
  | dist
)/
"""

[tool.isort]
profile         = "black"
line_length     = 110
known_first_party = ["src"]

[tool.flake8]
max-line-length = 110
ignore = ["E501", "W503", "E302"]
exclude = [".venv", "build", "dist", "__pycache__"]

[tool.mypy]
python_version        = "3.11"
warn_return_any       = true
warn_unused_configs   = true
ignore_missing_imports = true
exclude               = ["tests/", "notebooks/"]
